--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,3 +1,20 @@
 #won{
     display: none;
 }
+
+#canvas{
+    /*center the canvas*/
+    margin: auto;
+    /*make the canvas full screen*/
+    width: 100%;
+    height: 100%;
+}
+
+#canvas2{
+    /*center the canvas*/
+    margin: auto;
+    margin-top: -10px;
+    /*make the canvas full screen*/
+    width: 100%;
+    height: 100%;
+}
