--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,20 +1,49 @@
-#won{
+#won {
     display: none;
 }
 
-#canvas{
-    /*center the canvas*/
-    margin: auto;
-    /*make the canvas full screen*/
-    width: 100%;
-    height: 100%;
+#pic1 {
+    position: absolute;
+    bottom: 20px;
+    left: 16.5%;
+    width: 30px;
+    height: 350px;
+    z-index: 1;
+    background-color: black;
 }
 
-#canvas2{
-    /*center the canvas*/
-    margin: auto;
-    margin-top: -10px;
+#pic2 {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    width: 30px;
+    height: 350px;
+    z-index: 1;
+    background-color: black;
+}
+
+#pic3 {
+    position: absolute;
+    bottom: 20px;
+    left: 84%;
+    width: 30px;
+    height: 350px;
+    z-index: 1;
+    background-color: black;
+}
+
+#base {
+    /*put it right below canvas*/
+    position: absolute;
+    bottom: 0;
+    left: 0;
     /*make the canvas full screen*/
     width: 100%;
-    height: 100%;
+    height: 20px;
+    background-color: black;
+}
+
+body {
+    /*no scroll*/
+
 }
