hover underline on buttons

--- a/2d/click-to-select/public/style/style.css
+++ b/2d/click-to-select/public/style/style.css
@@ -39,6 +39,10 @@
     background-color: black;
 }
 
+.over-underline:hover {
+    text-decoration: underline;
+}
+
 body {
     /*no scroll*/
     overflow: hidden;
