--- a/threejs/public/style/style.css
+++ b/threejs/public/style/style.css
@@ -1,26 +1,36 @@
-input{
+input {
     position: absolute;
     top: 0;
     left: 0;
     /*transparent background*/
-    background: rgba(0,0,0,0);
+    background: rgba(0, 0, 0, 0);
 }
 
-button{
+button {
     position: absolute;
     top: 0;
     left: 55px;
 }
 
-h2{
+h2 {
     position: absolute;
     top: 20px;
     left: 0;
 }
 
-body{
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
+a {
+    position: absolute;
+    top: 40px;
+    left: 0;
+}
+
+.over-underline:hover {
+    text-decoration: underline;
+}
+
+body {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
