--- a/2d/click-to-select/public/style/style.css
+++ b/2d/click-to-select/public/style/style.css
@@ -43,6 +43,11 @@
     text-decoration: underline;
 }
 
+#buttons {
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     /*no scroll*/
     overflow: hidden;
