--- a/2d/click-to-select/public/style/style.css
+++ b/2d/click-to-select/public/style/style.css
@@ -46,9 +46,27 @@
 #buttons {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+}
+
+.grey{
+    color: grey;
 }
 
 body {
     /*no scroll*/
     overflow: hidden;
+}
+
+#won{
+    display: none;
+}
+
+#title{
+    position: absolute;
+    color: black;
+    /*center in x axis*/
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 20px;
 }
