--- a/2d/click-to-select/public/style/style.css
+++ b/2d/click-to-select/public/style/style.css
@@ -1,4 +1,4 @@
-#pic1 {
+#pic-area-0 {
     position: absolute;
     bottom: 20px;
     left: 16.667%;
@@ -8,7 +8,7 @@
     background-color: black;
 }
 
-#pic2 {
+#pic-area-1 {
     position: absolute;
     bottom: 20px;
     left: 50%;
@@ -18,7 +18,7 @@
     background-color: black;
 }
 
-#pic3 {
+#pic-area-2 {
     position: absolute;
     bottom: 20px;
     left: 80%;
@@ -29,11 +29,11 @@
 }
 
 #base {
-    /*put it right below canvas*/
+    /* put it right below canvas */
     position: absolute;
     bottom: 0;
     left: 0;
-    /*make the canvas full screen*/
+    /* make the canvas full screen */
     width: 100%;
     height: 20px;
     background-color: black;
@@ -49,23 +49,23 @@
     align-items: flex-start;
 }
 
-.grey{
+.grey {
     color: grey;
 }
 
 body {
-    /*no scroll*/
+    /* no scroll */
     overflow: hidden;
 }
 
-#won{
+#won {
     display: none;
 }
 
-#title{
+#title {
     position: absolute;
     color: black;
-    /*center in x axis*/
+    /* center in x axis */
     left: 50%;
     transform: translateX(-50%);
     font-size: 20px;
