--- a/threejs/public/style/style.css
+++ b/threejs/public/style/style.css
@@ -90,10 +90,10 @@ body {
     text-decoration: underline;
 }
 
-.links img:hover {
+/* .links img:hover {
     -webkit-filter: grayscale(0);
-    filter: grayscale(0);
-}
+    filter: grayscale(1);
+} */
 
 .links img {
     width: 40px;
@@ -102,4 +102,30 @@ body {
     filter: grayscale(100%);
     -webkit-transition: .15s ease-in-out;
     transition: .15s ease-in-out;
+}
+
+.links img:hover {
+    opacity: 1;
+    -webkit-animation: flash 0.3s;
+    animation: flash 0.3s;
+}
+
+@-webkit-keyframes flash {
+    0% {
+        scale: 1.2;
+    }
+
+    100% {
+        scale: 1;
+    }
+}
+
+@keyframes flash {
+    0% {
+        scale: 1.2;
+    }
+
+    100% {
+        scale: 1;
+    }
 }
