--- a/2d/drag-and-drop/public/style/style.css
+++ b/2d/drag-and-drop/public/style/style.css
@@ -1,133 +1,154 @@
 #pic-area-0 {
-  position: absolute;
-  bottom: 20px;
-  left: 16.6667%;
-  width: 30px;
-  height: 350px;
-  z-index: 1;
-  background-color: black;
+    position: absolute;
+    bottom: 20px;
+    left: 16.6667%;
+    width: 30px;
+    height: 350px;
+    z-index: 1;
+    background-color: black;
 }
 
 #pic-area-1 {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  width: 30px;
-  height: 350px;
-  z-index: 1;
-  background-color: black;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    width: 30px;
+    height: 350px;
+    z-index: 1;
+    background-color: black;
 }
 
 #pic-area-2 {
-  position: absolute;
-  bottom: 20px;
-  left: 80%;
-  width: 30px;
-  height: 350px;
-  z-index: 1;
-  background-color: black;
+    position: absolute;
+    bottom: 20px;
+    left: 80%;
+    width: 30px;
+    height: 350px;
+    z-index: 1;
+    background-color: black;
 }
 
 #base {
-  /* put it right below canvas */
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  /* make the canvas full screen */
-  width: 100%;
-  height: 20px;
-  background-color: black;
+    /* put it right below canvas */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    /* make the canvas full screen */
+    width: 100%;
+    height: 20px;
+    background-color: black;
 }
 
 #buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 #DROP-AREA-0 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 33%;
-  height: 65%;
-  opacity: 0;
-  z-index: 1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 33%;
+    height: 65%;
+    opacity: 0;
+    z-index: 1;
 }
 
 #DROP-AREA-1 {
-  position: absolute;
-  bottom: 0;
-  left: 33%;
-  width: 33%;
-  height: 65%;
-  opacity: 0;
-  z-index: 1;
+    position: absolute;
+    bottom: 0;
+    left: 33%;
+    width: 33%;
+    height: 65%;
+    opacity: 0;
+    z-index: 1;
 }
 
 #DROP-AREA-2 {
-  position: absolute;
-  bottom: 0;
-  left: 66%;
-  width: 33%;
-  height: 65%;
-  opacity: 0;
-  z-index: 1;
+    position: absolute;
+    bottom: 0;
+    left: 66%;
+    width: 33%;
+    height: 65%;
+    opacity: 0;
+    z-index: 1;
 }
 
 .over-underline:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .grey {
-  color: grey;
+    color: grey;
 }
 
 body {
-  /* no scroll */
-  overflow: hidden;
+    /* no scroll */
+    overflow: hidden;
 }
 
 #won {
-  display: none;
+    display: none;
 }
 
 #title {
-  position: absolute;
-  color: black;
-  /* center in x axis */
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 20px;
+    position: absolute;
+    color: black;
+    /* center in x axis */
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 20px;
 }
 
 .links {
-  display: flex;
-  position: absolute;
-  top: 0;
-  right: 0;
-  align-items: center;
-  margin: 10px;
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    align-items: center;
+    margin: 10px;
 }
 
 .links>a {
-  margin-right: 20px;
+    margin-right: 20px;
 }
 
 .links p:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .links img:hover {
-  -webkit-filter: grayscale(0);
-  filter: grayscale(0);
+    opacity: 1;
+    -webkit-animation: flash 0.3s;
+    animation: flash 0.3s;
+}
+
+@-webkit-keyframes flash {
+    0% {
+        scale: 1.2;
+    }
+
+    100% {
+        scale: 1;
+    }
+}
+
+@keyframes flash {
+    0% {
+        scale: 1.2;
+    }
+
+    100% {
+        scale: 1;
+    }
 }
 
 .links img {
-  width: 40px;
-  height: 40px;
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  -webkit-transition: .15s ease-in-out;
-  transition: .15s ease-in-out;
+    width: 40px;
+    height: 40px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    -webkit-transition: .15s ease-in-out;
+    transition: .15s ease-in-out;
 }
